Muestra los proyectos de un usuario conectado

--- a/src/scss/componentes/_formulario.scss
+++ b/src/scss/componentes/_formulario.scss
@@ -13,6 +13,7 @@
     input {
         flex: 1;
         padding: 1rem;
+        line-height: 0.5;
         border: none;
         background-color: lighten(v.$gris, 40%);
     }
