--- a/src/scss/dashboard/_dashboard.scss
+++ b/src/scss/dashboard/_dashboard.scss
@@ -3,14 +3,16 @@
 
 .dashboard {
     background-color: v.$grisClaro;
+     min-height: 100vh;
 
     @include m.tablet {
         display: flex;
-        height: 100vh;
+       
     }
 
     .principal {
         flex: 1;
+        // overflow: scroll;
     }
 
     .contenido {
